tests/ui/async-await/drop-track-bad-field-in-fru.stderr
error[E0559]: variant `Option<_>::None` has no field named `value`
  --> $DIR/drop-track-bad-field-in-fru.rs:6:12
   |
LL |     None { value: (), ..Default::default() }.await;
   |            ^^^^^ `Option<_>::None` does not have this field
   |
   = note: all struct fields are already assigned

error[E0277]: the trait `IntoFuture` is not implemented for `Option<_>`
  --> $DIR/drop-track-bad-field-in-fru.rs:6:46
   |
LL |     None { value: (), ..Default::default() }.await;
   |                                             -^^^^^
   |                                             ||
   |                                             |the trait `IntoFuture` is not implemented for `Option<_>`, which is required by `Option<_>: IntoFuture`
   |                                             help: remove the `.await`
   |
   = note: required for `Option<_>` to implement `IntoFuture`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0559.
For more information about an error, try `rustc --explain E0277`.
